# pydiscogstoqrfactory

./: .dockerignore  .env.example  .mise.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/pydiscogsqrcodegenerator/: __init__.py  config.py  csv_service.py  discogs_service.py  extensions.py  models.py  pdf_service.py  scheduler.py  util_tz.py
src/pydiscogsqrcodegenerator/blueprints/: collection.py  export.py  settings.py
src/pydiscogsqrcodegenerator/static/: style.css
src/pydiscogsqrcodegenerator/templates/: _cache_info.html  base.html  landing.html
src/pydiscogsqrcodegenerator/templates/collection/: changed.html  folders.html  format_releases.html  formats.html  latest.html  releases.html
src/pydiscogsqrcodegenerator/templates/export/: preview.html  preview_pdf.html
src/pydiscogsqrcodegenerator/templates/settings/: index.html
src/pydiscogstoqrfactory/: __init__.py  config.py  csv_service.py  models.py  pdf_service.py
src/pydiscogstoqrfactory/blueprints/: auth.py  export.py  settings.py
src/pydiscogstoqrfactory/static/: app.js  style.css
src/pydiscogstoqrfactory/templates/: _breadcrumbs.html  base.html  landing.html
src/pydiscogstoqrfactory/templates/collection/: format_releases.html  format_sizes.html  latest.html  releases.html
tests/: conftest.py  test_auth_routes.py  test_collection_routes.py  test_csv_service.py  test_discogs_service.py  test_export_routes.py  test_pdf_routes.py  test_pdf_service.py  test_persistent_cache.py  test_scheduler.py  test_settings_routes.py  test_util_tz.py
(+3 files in other folders)
